--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-scroll-up": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
